crates/ruff/src/rules/pep8_naming/snapshots/ruff__rules__pep8_naming__tests__N803_N803.py.snap
---
source: crates/ruff/src/rules/pep8_naming/mod.rs
---
./resources/test/fixtures/pep8_naming/N803.py:1:16: N803 Argument name `A` should be lowercase
  |
1 | def func(_, a, A):
  |                ^ N803
2 |     return _, a, A
  |

./resources/test/fixtures/pep8_naming/N803.py:6:28: N803 Argument name `A` should be lowercase
  |
6 | class Class:
7 |     def method(self, _, a, A):
  |                            ^ N803
8 |         return _, a, A
  |


