crates/ruff/src/rules/pep8_naming/snapshots/ruff__rules__pep8_naming__tests__N804_N804.py.snap
---
source: crates/ruff/src/rules/pep8_naming/mod.rs
expression: diagnostics
---
- - kind:
      name: InvalidFirstArgumentNameForClassMethod
      body: "First argument of a class method should be named `cls`"
      suggestion: ~
      fixable: false
    location:
      row: 30
      column: 26
    end_location:
      row: 30
      column: 30
    fix: ~
    parent: ~
  - kind:
      name: InvalidFirstArgumentNameForClassMethod
      body: "First argument of a class method should be named `cls`"
      suggestion: ~
      fixable: false
    location:
      row: 38
      column: 55
    end_location:
      row: 38
      column: 59
    fix: ~
    parent: ~
  - kind:
      name: InvalidFirstArgumentNameForClassMethod
      body: "First argument of a class method should be named `cls`"
      suggestion: ~
      fixable: false
    location:
      row: 43
      column: 19
    end_location:
      row: 43
      column: 23
    fix: ~
    parent: ~

