crates/ruff/src/rules/pep8_naming/snapshots/ruff__rules__pep8_naming__tests__N806_N806.py.snap
---
source: crates/ruff/src/rules/pep8_naming/mod.rs
---
N806.py:12:5: N806 Variable `Camel` in function should be lowercase
   |
10 |     GLOBAL = "bar"
11 |     lower = 0
12 |     Camel = 0
   |     ^^^^^ N806
13 |     CONSTANT = 0
14 |     _ = 0
   |

N806.py:13:5: N806 Variable `CONSTANT` in function should be lowercase
   |
11 |     lower = 0
12 |     Camel = 0
13 |     CONSTANT = 0
   |     ^^^^^^^^ N806
14 |     _ = 0
   |


