crates/ruff/src/rules/pep8_naming/snapshots/ruff__rules__pep8_naming__tests__N807_N807.py.snap
---
source: crates/ruff/src/rules/pep8_naming/mod.rs
---
./resources/test/fixtures/pep8_naming/N807.py:1:5: N807 Function name should not start and end with `__`
  |
1 | def __bad__():
  |     ^^^^^^^ N807
2 |     pass
  |

./resources/test/fixtures/pep8_naming/N807.py:14:9: N807 Function name should not start and end with `__`
   |
14 | def nested():
15 |     def __bad__():
   |         ^^^^^^^ N807
16 |         pass
   |


