crates/ruff/src/rules/pep8_naming/snapshots/ruff__rules__pep8_naming__tests__N811_N811.py.snap
---
source: crates/ruff/src/rules/pep8_naming/mod.rs
expression: diagnostics
---
- - kind:
      name: ConstantImportedAsNonConstant
      body: "Constant `CONST` imported as non-constant `const`"
      suggestion: ~
      fixable: false
    location:
      row: 1
      column: 0
    end_location:
      row: 1
      column: 25
    fix: ~
    parent: ~
  - kind:
      name: ConstantImportedAsNonConstant
      body: "Constant `CONSTANT` imported as non-constant `constant`"
      suggestion: ~
      fixable: false
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 36
    fix: ~
    parent: ~
  - kind:
      name: ConstantImportedAsNonConstant
      body: "Constant `ANOTHER_CONSTANT` imported as non-constant `another_constant`"
      suggestion: ~
      fixable: false
    location:
      row: 3
      column: 0
    end_location:
      row: 3
      column: 52
    fix: ~
    parent: ~

